Update goland.vmoptions