@@ -1,4 +1,55 @@
 # ~/Library/Application Support/JetBrains/GoLand2021.3/goland.vmoptions
 
--Xmx1400m
--XX:+UseG1GC
+# -XX:+UseG1GC
+-Xms256m
+-Xmx1500m
+-Xss64m
+-XX:ReservedCodeCacheSize=128m
+-XX:+UseCompressedOops
+-XX:NewRatio=2
+-Dfile.encoding=UTF-8
+-XX:+UseConcMarkSweepGC
+-XX:SoftRefLRUPolicyMSPerMB=250
+-XX:NewSize=128m
+-XX:MaxNewSize=512m
+-XX:PermSize=128m
+-XX:MaxPermSize=512m
+-XX:+UseParNewGC
+-XX:ParallelGCThreads=4
+-XX:MaxTenuringThreshold=1
+-XX:SurvivorRatio=8
+-XX:+UseCodeCacheFlushing
+-XX:+AggressiveOpts
+-XX:+CMSClassUnloadingEnabled
+-XX:+CMSIncrementalMode
+-XX:+CMSIncrementalPacing
+-XX:+CMSParallelRemarkEnabled
+-XX:CMSInitiatingOccupancyFraction=65
+-XX:+CMSScavengeBeforeRemark
+-XX:+UseCMSInitiatingOccupancyOnly
+-XX:-TraceClassUnloading
+-XX:+AlwaysPreTouch
+-XX:+TieredCompilation
+-XX:+DoEscapeAnalysis
+-XX:+UnlockExperimentalVMOptions
+-XX:LargePageSizeInBytes=128m
+-XX:+DisableExplicitGC
+-XX:+ExplicitGCInvokesConcurrent
+-XX:+PrintGCDetails
+-XX:+PrintFlagsFinal
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:+CMSPermGenSweepingEnabled
+-XX:+UseAdaptiveGCBoundary
+-XX:+UseSplitVerifier
+-XX:CompileThreshold=10000
+-XX:+UseCompressedStrings
+-XX:+OptimizeStringConcat
+-XX:+UseStringCache
+-XX:+UseFastAccessorMethods
+-XX:+UnlockDiagnosticVMOptions
+-ea
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
+-XX:-OmitStackTraceInFastThrow
+-Xverify:none
+-Dide.no.platform.update=true
